地址管理收尾和客服

--- a/TGWSCAPP /TGWSCAPP/ViewControllers/Tab_4/Funct/cell/MyCollectCell.xib
+++ b/TGWSCAPP /TGWSCAPP/ViewControllers/Tab_4/Funct/cell/MyCollectCell.xib
@@ -21,6 +21,7 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tAm-Mx-XW3">
                         <rect key="frame" x="10" y="10" width="60" height="60"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="14z-zL-lWi"/>
                             <constraint firstAttribute="height" constant="60" id="pvl-do-vvJ"/>
