--- a/TGWSCAPP /TGWSCAPP/ViewControllers/Tab_4/Funct/AddAddressViewController.xib
+++ b/TGWSCAPP /TGWSCAPP/ViewControllers/Tab_4/Funct/AddAddressViewController.xib
@@ -159,7 +159,7 @@
                                 <constraint firstAttribute="height" constant="45" id="6li-5f-7sS"/>
                                 <constraint firstAttribute="width" constant="40" id="aqd-ve-Kh6"/>
                             </constraints>
-                            <state key="normal" image="Tab_4-24"/>
+                            <state key="normal" image="arrow_right"/>
                             <connections>
                                 <action selector="selectAdderss:" destination="-1" eventType="touchUpInside" id="6sm-ik-t22"/>
                             </connections>
@@ -274,8 +274,8 @@
         </view>
     </objects>
     <resources>
-        <image name="Tab_4-24" width="15.5" height="8.5"/>
         <image name="Tab_4-25" width="20" height="20"/>
         <image name="Tab_4-26" width="19" height="19"/>
+        <image name="arrow_right" width="18" height="32"/>
     </resources>
 </document>
